<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mnSalvar"
        android:orderInCategory="100"
        android:title="@string/lblSalvar"
        android:icon="@drawable/ic_check"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnAulas"
        android:orderInCategory="100"
        android:title="@string/lblAulas"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnRelatorio"
        android:orderInCategory="100"
        android:title="@string/lblRelatorio"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnExcluir"
        android:orderInCategory="100"
        android:title="@string/lblExcluir"
        app:showAsAction="never" />
</menu>