<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forms.ImpDados.frgImpDadosDet">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/lblNome"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txvNome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_det_imp_dados"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lblStatus"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txvNome"
                app:layout_constraintStart_toStartOf="@+id/txvNome"
                app:layout_constraintTop_toBottomOf="@+id/txvNome" />

            <TextView
                android:id="@+id/txvStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="@dimen/txt_det_imp_dados"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lblInstrumento"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txvStatus"
                app:layout_constraintStart_toStartOf="@+id/txvStatus"
                app:layout_constraintTop_toBottomOf="@+id/txvStatus" />

            <TextView
                android:id="@+id/txvInstrumento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="@dimen/txt_det_imp_dados"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lblMetodo"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txvInstrumento"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txvInstrumento"
                app:layout_constraintTop_toBottomOf="@+id/txvInstrumento" />

            <TextView
                android:id="@+id/txvMetodo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="@dimen/txt_det_imp_dados"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lblFone"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txvMetodo"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txvMetodo"
                app:layout_constraintTop_toBottomOf="@+id/txvMetodo" />

            <TextView
                android:id="@+id/txvFone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="@dimen/txt_det_imp_dados"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lblNascimento"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txvFone"
                app:layout_constraintTop_toBottomOf="@+id/txvFone" />

            <TextView
                android:id="@+id/txvDataNasc"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:text="__/__/____"
                android:textColor="#000"
                android:textSize="@dimen/txt_det_imp_dados"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lblBatismo"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txvDataBatismo"
                app:layout_constraintTop_toBottomOf="@+id/txvFone" />

            <TextView
                android:id="@+id/txvDataBatismo"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:ems="10"
                android:inputType="date"
                android:text="__/__/____"
                android:textColor="#000"
                android:textSize="@dimen/txt_det_imp_dados"
                app:layout_constraintStart_toEndOf="@+id/txvDataNasc"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lblInicio"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/txvDataNasc" />

            <TextView
                android:id="@+id/txvDataInicio"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:text="__/__/____"
                android:textColor="#000"
                android:textSize="@dimen/txt_det_imp_dados"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lblOficializacao"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txvDataBatismo"
                app:layout_constraintTop_toBottomOf="@+id/txvDataBatismo" />

            <TextView
                android:id="@+id/txvDataOficializacao"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:text="__/__/____"
                android:textColor="#000"
                android:textSize="@dimen/txt_det_imp_dados"
                app:layout_constraintStart_toStartOf="@+id/txvDataBatismo"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lblEndereco"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/txvDataInicio"
                app:layout_constraintTop_toBottomOf="@+id/txvDataInicio" />

            <TextView
                android:id="@+id/txvEndereco"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textSize="@dimen/txt_det_imp_dados"
                app:layout_constraintEnd_toEndOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lblObservacao"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txvEndereco"
                app:layout_constraintStart_toStartOf="@+id/txvEndereco"
                app:layout_constraintTop_toBottomOf="@+id/txvEndereco" />

            <TextView
                android:id="@+id/txtObsevacao"
                android:layout_width="0dp"
                android:layout_height="145dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textSize="@dimen/txt_det_imp_dados"
                app:layout_constraintEnd_toEndOf="@+id/textView12"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>